--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 <body>
 	<ul class="pictures">
 	    <li> <a href="1" title="相识"> <img src="img/11.jpg" alt="相识" /> </a> </li>
-	    <li> <a href="2" title="凝视"> <img src="img/22.jpg" alt="凝视" /> </a> </li>
-	    <li> <a href="3" title="甜睡"> <img src="img/33.jpg" alt="甜睡" /> </a> </li>
-	    <li> <a href="4" title="逗乐"> <img src="img/44.jpg" alt="逗乐" /> </a> </li>
-	    <li> <a href="5" title="奔跑"> <img src="img/55.jpg" alt="奔跑" /> </a> </li>
-	    <li> <a href="6" title="漠视"> <img src="img/66.jpg" alt="漠视" /> </a> </li>  
+	    <li> <a href="2" title="凝视"> <img src="img/22.JPG" alt="凝视" /> </a> </li>
+	    <li> <a href="3" title="甜睡"> <img src="img/33.JPG" alt="甜睡" /> </a> </li>
+	    <li> <a href="4" title="逗乐"> <img src="img/44.JPG" alt="逗乐" /> </a> </li>
+	    <li> <a href="5" title="奔跑"> <img src="img/55.JPG" alt="奔跑" /> </a> </li>
+	    <li> <a href="6" title="漠视"> <img src="img/66.JPG" alt="漠视" /> </a> </li>  
 	</ul>
 </body>
 </html>
